# diadro_ws

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.finish  build-with-docker.sh  readme.md  run-server.sh  save-image.sh
diadro/: Cargo.toml  build_web.sh  default.profraw  deny.toml  error  start_server.sh
diadro/docs/: diagram.xml  index.html  manifest.json  sw.js
diadro/src/: app.rs  lib.rs  main.rs  ws.rs
diadro/src/graph/: arrow.rs  graphics.rs  mod.rs  rect.rs  shapes.rs  text.rs  utils.rs
diadro/src/rgraph/: algo.rs  cell.rs  errors.rs  graph.rs  mod.rs  ucell.rs
dserver/: Cargo.toml
dserver/.cargo/: config.toml
dserver/src/: main.rs  messages.rs  server.rs  session.rs  wasm_msg.rs
