[package]
name = "diadro"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.59"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tracing = "*"
eframe = { git = "https://github.com/emilk/egui", branch = "master", features=["persistence"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
minidom = "0.14.0"
base64 = "*"
flate2 = "*"
urlencoding = "*"
thiserror = "*"
futures = "*"
futures_codec = "*"
futures_cbor_codec = "*"
uuid = { version = "*", features = ["v4"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "*", features = ["rt-multi-thread", "time"] }
chrono = { version = "*", default-features = false, features = ["clock"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "*", default-features = false, features = ["wasmbind", "clock"] }
console_error_panic_hook = "*"
tracing-wasm = "*"
wasm-sockets = "*"
web-sys = { version = "*", features = ["Worker"]}