[package]
name = "dserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web = { version = "*", features = ["rustls"] }
actix-files = "*"
sled = "*"
actix-web-actors = "*"
tracing = "*"
tracing-subscriber = "*"
brotli = "*"
thiserror = "*"
anyhow = "*"
cached = "*"
num_cpus = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
