[package]
name = "dserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web = { version = "*", features = ["rustls"] }
rustls = "*"
rustls-native-certs = "*"
rustls-pemfile = "*"
actix-files = "*"
sled = "*"
actix-web-actors = "*"
tracing = "0.1.34"
tracing-subscriber = "*"
brotli = "*"
thiserror = "*"
anyhow = "*"
cached = "*"
num_cpus = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
